--- a/style.css
+++ b/style.css
@@ -12,16 +12,16 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: linear-gradient(135deg, #43CBFF 10%, #9708CC 100%);
+  background-image: linear-gradient(135deg, #07aff1 10%, #b406f4 100%);
 }
 .product-card {
   position: relative;
-  max-width: 355px;
+  max-width: 400px;
   width: 100%;
-  border-radius: 25px;
-  padding: 20px 30px 30px 30px;
+  border-radius: 35px;
+  padding: 10px 20px 30px 30px;
   background: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(247, 6, 6, 0.2);
   z-index: 3;
   overflow: hidden;
 }
@@ -37,7 +37,7 @@ body{
 }
 .product-card .logo-cart i{
   font-size: 27px;
-  color: #707070;
+  color: #ed1818;
   cursor: pointer;
   transition: color 0.3s ease;
 }
@@ -154,7 +154,7 @@ body{
   height: 100%;
   width: 300%;
   left: -100%;
-  background-image: linear-gradient(135deg,#9708CC, #43CBFF,#9708CC, #43CBFF );
+  background-image: linear-gradient(135deg,#b609f6, #43CBFF,#9708CC, #43CBFF );
   transition: all 0.4s ease;
   border-radius: 25PX;
 }
